<resources>
    <string name="app_name">Street Wars</string>
    <string name="action_settings">Settings</string>

    <string name="account_type">com.streetgames.streetwars.account</string>

    <string name="content_authority">com.streetgames.streetwars.game</string>

    <string name="contract_title">Contrat</string>

    <string name="drawer_description_close">Close Drawer</string>
    <string name="drawer_description_open">Open Drawer</string>

    <string name="menu_contract">Contrat</string>
    <string name="menu_map">Map</string>
    <string name="menu_water_code">Water Code</string>
    <string name="menu_news">News</string>
    <string name="menu_rules">Règles</string>
    <string name="menu_share">Partager</string>
    <string name="menu_target_down">Suppression d’une cible</string>
    <string name="menu_tickets">Tickets</string>

    <string name="map_title">Map</string>

    <string name="water_code_title">Water Code</string>
    <string name="water_code_rule_1">Le Watercode doit être saisi le plus tôt possible afin de ne pas déséquilibrer le jeu.</string>
    <string name="water_code_rule_2">Lors d’un échange de Watercode, personne n’est en zone sûre.</string>
    <string name="water_code_rule_3">Les éliminations sont irréversibles. En cas de litige, n’échangez pas de Watercode et utilisez le système de tickets.</string>
    <string name="water_code_rule_4">Ne donner pas votre Watercode si quelqu’un vous arrose un samedi.</string>

    <string name="target_school">School</string>
    <string name="target_work">Work</string>
    <string name="target_home">Home</string>

    <string name="share_water_code">Envoyer mon Water Code</string>

    <string name="util_name">%1$s %2$s</string>
    <string name="target_extra">Extra</string>

    <string name="elimination_water_code_label">Who\'ve been killed?</string>
    <string name="elimination_killer_label">Who\'s the killer?</string>
    <string name="elimination_water_code_hint">Water Code</string>

</resources>
