<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/elimination_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context="fr.streetgames.streetwars.app.fragments.ContractEliminationFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/elimination_water_code_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elimination_water_code_label"
                android:textColor="?attr/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/elimination_water_code_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/elimination_water_code_label"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/elimination_water_code_photo"
                android:layout_toStartOf="@+id/elimination_water_code_photo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/elimination_water_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:hint="@string/elimination_water_code_hint" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/elimination_water_code_photo"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/elimination_water_code_container"
                android:minWidth="48dp"
                android:src="@drawable/ic_photo_camera" />

            <TextView
                android:id="@+id/elimination_killer_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/elimination_water_code_container"
                android:layout_marginTop="24dp"
                android:text="@string/elimination_killer_label"
                android:textColor="?attr/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/elimination_killer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/elimination_killer_label"
                android:layout_marginTop="16dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_done"
        app:layout_anchor="@id/elimination_card"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>